--- a/index.html
+++ b/index.html
@@ -160,26 +160,42 @@
 </head>
 
 <body class="bg-primary text-white font-inter">
+    <!-- Responsive Navbar -->
     <nav class="fixed top-0 left-0 right-0 z-50 bg-white/95 backdrop-blur-sm border-b border-gray-100 shadow-sm">
-        <div class="w-full px-6 py-4">
-            <div class="text-center mb-4">
-                <div class="font-['Pacifico'] text-2xl text-primary">logo</div>
-            </div>
-            <div class="flex flex-wrap justify-center items-center gap-8">
-                <a href="#home" class="nav-link text-gray-600 hover:text-secondary transition-colors">Home</a>
-                <a href="#why-us" class="nav-link text-gray-600 hover:text-secondary transition-colors">Why Us</a>
-                <a href="#case-studies" class="nav-link text-gray-600 hover:text-secondary transition-colors">Case
+        <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
+
+            <!-- Logo -->
+            <div class="font-['Pacifico'] text-2xl text-primary">logo</div>
+
+            <!-- Hamburger Button (Mobile) -->
+            <button id="menu-toggle" class="md:hidden text-gray-600 focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
+
+            <!-- Navigation Links -->
+            <div id="menu"
+                class="hidden md:flex flex-col md:flex-row md:items-center gap-4 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent shadow-md md:shadow-none p-6 md:p-0">
+                <a href="#home" class="nav-link block text-gray-600 hover:text-secondary transition-colors m-2">Home</a>
+                <a href="#why-us" class="nav-link block text-gray-600 hover:text-secondary transition-colors m-2">Why Us</a>
+                <a href="#case-studies" class="nav-link block text-gray-600 hover:text-secondary transition-colors m-2">Case
                     Studies</a>
-                <a href="#process" class="nav-link text-gray-600 hover:text-secondary transition-colors">Process</a>
-                <a href="#faq" class="nav-link text-gray-600 hover:text-secondary transition-colors">FAQ</a>
-                <a href="#contact" class="nav-link text-gray-600 hover:text-secondary transition-colors">Contact</a>
+                <a href="#process"
+                    class="nav-link block text-gray-600 hover:text-secondary transition-colors m-2">Process</a>
+                <a href="#faq" class="nav-link block text-gray-600 hover:text-secondary transition-colors m-2">FAQ</a>
+                <a href="#contact"
+                    class="nav-link block text-gray-600 hover:text-secondary transition-colors m-2">Contact</a>
                 <a href="https://wa.me/1234567890?text=Hi, I'd like to book a free consultation call"
-                    class="cta-button text-white px-6 py-2 !rounded-button font-semibold whitespace-nowrap">
+                    class="cta-button block text-center text-white px-6 py-2 !rounded-button font-semibold whitespace-nowrap bg-secondary hover:bg-primary transition-colors">
                     Book a Free Call
                 </a>
             </div>
         </div>
     </nav>
+
+
+
     <section id="home" class="min-h-screen flex items-center justify-center pt-32 pb-20 px-6"
         style="background-image: url('https://readdy.ai/api/search-image?query=modern%20bright%20airy%20digital%20marketing%20office%20with%20white%20walls%20and%20large%20windows%2C%20multiple%20screens%20showing%20advertising%20analytics%20and%20campaign%20data%2C%20professional%20team%20working%20on%20laptops%2C%20clean%20minimalist%20workspace%20with%20light%20wood%20and%20teal%20accent%20colors%2C%20natural%20lighting%20creating%20professional%20ambiance%2C%20wide%20angle%20view%20showing%20collaborative%20environment%2C%20premium%20office%20interior%20design%20with%20glass%20walls%20and%20modern%20furniture&width=1920&height=1080&seq=hero-bg-001&orientation=landscape'); background-size: cover; background-position: center; background-attachment: fixed;">
         <div class="absolute inset-0 bg-white/90"></div>
@@ -573,6 +589,13 @@
             </div>
         </div>
     </footer>
+    <script>
+        // Mobile menu toggle
+        document.getElementById('menu-toggle').addEventListener('click', function () {
+            const menu = document.getElementById('menu');
+            menu.classList.toggle('hidden');
+        });
+    </script>
     <script>
         document.getElementById('contact-us-form').addEventListener('submit', async function (event) {
             event.preventDefault(); // stop page reload
